# autoresearch

./: README.md  experiment.py  prepare.py  program.md  pyproject.toml
