[project]
name = "autoresearch-email"
version = "0.1.0"
description = "Autonomous email experiment idea generator using Mozart/BigQuery data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "db-dtypes>=1.0.0",
]
